# project-guides

./: .gitignore  .project-guide.yml  CHANGELOG.md  README.md  mkdocs.yml  project-guide-old-template.md  pyproject.toml  requirements-dev.txt
.github/: FUNDING.yml
.github/workflows/: ci.yml  deploy-docs.yml  publish.yml  test.yml
docs/project-guide/: .metadata.yml  go-project-guide.md  go.md
docs/project-guide/templates/artifacts/: project-essentials.md
docs/project-guide/templates/modes/: _header-common.md  plan-concept-mode.md  plan-phase-mode.md  plan-stories-mode.md  project-scaffold-mode.md
docs/site/: .gitignore  getting-started.md  index.html
docs/site/about/: changelog.md  license.md
docs/site/developer-guide/: contributing.md  development.md  testing.md
docs/site/getting-started/: configuration.md  installation.md  quick-start.md
docs/site/user-guide/: commands.md  configuration.md  install-options.md  modes.md  overrides.md  workflow.md
docs/specs/: concept.md  descriptions.md  features.md  phase-j-modes-plan.md  phase-k-release-lifecycle-plan.md  phase-l-project-essentials-plan.md  project-essentials.md  stories.md  tech-spec.md  ux-problems.md
docs/specs/.archive/: phase-m-project-essentials-plan.md  phase-n-mode-naming-cli-memory-plan.md  stories-v2.0.20.md  stories-v2.3.9.md  stories-v2.4.19.md
project_guide/: actions.py  cli.py  config.py  exceptions.py  metadata.py  render.py  runtime.py  stories.py  sync.py  version.py
project_guide/templates/project-guide/: .metadata.yml  go-project-guide.md  project-guide-metadata.yml
project_guide/templates/project-guide/templates/artifacts/: concept.md  features.md  stories.md  tech-spec.md
project_guide/templates/project-guide/templates/modes/: _header-common.md  _header-sequence.md  brand-mode.md  code-test-first-mode.md  code-velocity-mode.md  debug-mode.md  default-mode.md  document-brand-mode.md  document-landing-mode.md  document-mode.md  plan-concept-mode.md  plan-features-mode.md  plan-phase-mode.md  plan-stories-mode.md  plan-tech-spec-mode.md  project-scaffold-mode.md  refactor-document-mode.md  refactor-plan-mode.md
project_guides/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  sync.py  version.py
project_guides/templates/: .project-guide.yml.template
project_guides/templates/guides/: project-guide.md
scripts/: spike_archive_stories.py
tests/: __init__.py  test_actions.py  test_archive_stories_mode.py  test_cli.py  test_config.py  test_integration.py  test_metadata.py  test_purge.py  test_render.py  test_runtime.py  test_sync.py
